fixes flex and overflow issue on some pages

--- a/src/modules/commonContainers/fullwidthContainer/full_width_container.module.scss
+++ b/src/modules/commonContainers/fullwidthContainer/full_width_container.module.scss
@@ -20,6 +20,5 @@
 
 
 .content {
-  // min-height: 100%
-  
+  min-height: 60vh;
 }
